# CircuitPython_AS5600

./: README.rst  as5600.py  pyproject.toml
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: as5600_simpletest.py
uml/: as5600.puml
