# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2025 Noel Anderson
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-as5600"
description = "CircuitPython helper library for the AMS AS5600 12-bit on-axis magnetic rotary position sensor"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Noel Anderson", email = "noel@badwolf.us"}
]
urls = {Homepage = "https://github.com/noelanderson/CircuitPython_AS5600"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "as5600",
    "magnetic",
    "sensor,",
    "rotary",
    "position",
    "sensor",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["as5600"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
